chore: use latest golangci-lint-action

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -24,4 +24,6 @@ jobs:
         with:
           go-version: 1.22
       - name: 🧹 Lint
-        uses: golangci/golangci-lint-action@v4
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: latest
