--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -22,8 +22,13 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: 1.22
-      - name: 🧹 Lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: latest
+          go-version-file: 'go.mod'
+      - name: 🚬 Smoke Test
+        run: |
+          go build ./...
+          ./m3u8-downloader -version | grep -q 'm3u8-downloader' || exit 1
+      # - name: 🧹 Lint
+      #   uses: golangci/golangci-lint-action@v6
+      #   with:
+      #     version: latest
+      #     args: --timeout=10m --out-format=colored-line-number
