--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,21 +18,21 @@ jobs:
         with:
           token: ${{ secrets.RELEASE_PLEASE_PAT }}
           release-type: simple
-      - uses: actions/checkout@v4
-        if: ${{ steps.release.outputs.release_created }}
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-go@v5
-        if: ${{ steps.release.outputs.release_created }}
-        with:
-          go-version: '1.20'
-      - uses: goreleaser/goreleaser-action@v6
-        if: ${{ steps.release.outputs.release_created }}
-        with:
-          # either 'goreleaser' (default) or 'goreleaser-pro'
-          distribution: goreleaser
-          # 'latest', 'nightly', or a semver
-          version: '~> v2'
-          args: release --clean
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - uses: actions/checkout@v4
+      #   if: ${{ steps.release.outputs.release_created }}
+      #   with:
+      #     fetch-depth: 0
+      # - uses: actions/setup-go@v5
+      #   if: ${{ steps.release.outputs.release_created }}
+      #   with:
+      #     go-version: '1.20'
+      # - uses: goreleaser/goreleaser-action@v6
+      #   if: ${{ steps.release.outputs.release_created }}
+      #   with:
+      #     # either 'goreleaser' (default) or 'goreleaser-pro'
+      #     distribution: goreleaser
+      #     # 'latest', 'nightly', or a semver
+      #     version: '~> v2'
+      #     args: release --clean
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
